<resources>
    <string name="app_name">KosNow</string>
    <string name="splash">Hunian Terjamin dengan KosNow</string>
    <string name="welcome">Welcome Back</string>
    <string name="subwelcome">Sign in to continue</string>
    <string name="register">Welcome</string>
    <string name="family">Sign up to be our family</string>
    <string name="forgot">Forgot your password?</string>
    <string name="signup">Don\'t have account? Sign up here</string>
    <string name="lets">Already have account? Sign in here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="email">Email</string>
    <string name="forget">Did you forget your password?</string>
    <string name="descforgot">Enter your email address you\'re using for your account below and we will send you a reset password link</string>
    <string name="backtosign">Back to Sign in</string>
    <string name="mustfill">All fields must be filled</string>
    <string name="mustpass">Password must be more than 6</string>
    <string name="mustre">Re-type password not match with your password</string>
    <string name="cantregist">Cannot register with this email or password</string>
    <string name="loginfail">Login Failed, check your password and connection</string>
    <string name="checkemail">Please check your Email</string>
    <string name="doubleback">Press BACK again to exit</string>
    <string name="requestemail">Request reset link</string>
    <string name="login">Login</string>
    <string name="signupnow">Sign Up</string>
    <string name="navhome">Home</string>
    <string name="navnotif">Notification</string>
    <string name="navmessage">Message</string>
    <string name="navaccount">Profile</string>
    <string name="logout">Logout</string>
    <string name="harga">price</string>
    <string name="nomor_kamar">Number Kamar</string>
    <string name="tambah_data_kamar">Add Room Data</string>
    <string name="pilih_fasilitas_yang_ada">Select available facility:</string>
    <string name="ac">AC</string>
    <string name="lemari">Cupboard</string>
    <string name="kamar_mandi">Bathroom</string>
    <string name="kipas_angin">Fan</string>
    <string name="input_data">Input data</string>
    <string name="tambah_data">ADD DATA</string>
    <string name="luas_kamar">Size Room</string>
    <string name="kamar_nomor">Number Room</string>
    <string name="nomor">Number</string>
    <string name="detail_kamar">Detail Kamar</string>
    <string name="lebar">width</string>
    <string name="panjang">long</string>
    <string name="m">m</string>
    <string name="x">X</string>
    <string name="rp">Rp.</string>
    <string name="edit_data">Edit data</string>
    <string name="hapus_data">Delete data</string>
    <string name="submit_data">SUBMIT DATA</string>
    <string name="data_kamar">Room Data</string>
    <string name="bulan">/Month</string>
    <string name="pilih_wilayah">Choose Region :</string>
    <string name="denpasar">Denpasar</string>
    <string name="lokasi">Lokasi</string>
    <string name="luas">Luas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="sewa_kamar">Sewa Kamar!!!</string>
    <string name="pesan_kamar">Pesan Kamar</string>
    <string name="silahkan_isi_data_pemesanan">Silahkan isi data pemesanan</string>
    <string name="fasilitass">Fasilitas :</string>
    <string name="ac_mesin_cuci">AC, MESIN CUCI</string>
    <string name="lama_sewa">Lama sewa</string>
    <string name="bulanss">Bulan</string>
    <string name="lama">Lama</string>
    <string name="tanggal_mulai_sewa">Tanggal Mulai Sewa</string>
    <string name="set_tanggal">Set Tanggal</string>
    <string name="_31_02_2020">31-02-2020</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="pesan_kamar_sekarang">Pesan Kamar Sekarang</string>
    <string name="luass">Luas :</string>
    <string name="lokasis">Lokasi :</string>
    <string name="p_x_l_meter">P x L Meter</string>
    <string name="fasilitas_kamar_yang_ada">Fasilitas Kamar Yang Ada</string>
    <string name="nama_lokasi">Nama Lokasi</string>
    <string name="hargass">Harga : Rp.</string>
    <string name="nama_penyewa">Nama Penyewa :</string>
    <string name="payment">Payment</string>
    <string name="nomor_kamarss">Nomor Kamar :</string>
    <string name="selesaikan_pembayaran">Selesaikan Pembayaran</string>
    <string name="silahkan_ikuti_instruksi_dibawah">Silahkan ikuti instruksi dibawah</string>
    <string name="transfer_ke_rekening_dibawah_ini_sesuai_dengan_harga_yang_tertera">Transfer ke rekening dibawah ini sesuai dengan harga yang tertera</string>
    <string name="kemudian_upload_tanda_bukti_transfer_struk_di_kolom_bawah_ini">Kemudian upload tanda bukti transfer (struk) di kolom bawah ini</string>
    <string name="sudah_bukti">Anda sudah mengupload file, silahkan tunggu konfirmasi dari admin</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="tagihan_sewa">Tagihan Sewa</string>
    <string name="kirim_sekarang">Kirim Sekarang</string>
    <string name="kirim_lagi">Kirim Ulang</string>
    <string name="bukti_pembayaran_kamar">Bukti Pembayaran Kamar</string>
    <string name="konfirmasi_bukti_pembayaran">Konfirmasi Bukti Pembayaran</string>
    <string name="terima_bukti_pembayaran">Terima Bukti Pembayaran</string>
    <string name="tanggal_mulai_sewas">Tanggal Mulai Sewa</string>
    <string name="hint1">Terima kasih karena telah menjadi bagian dari keluarga kami, silahkan nikmati fasilitas yang telah disediakan</string>
    <string name="hint2">Apabila ada kendala tentang kamar atau biaya sewa silahkan hubungi admin di bagian profile</string>
    <string name="tanggal_bayar_sewa">Tanggal Bayar Sewa</string>
    <string name="kami_akan_memberikan_informasi_selanjutnya">Kami akan memberikan informasi selanjutnya</string>
    <string name="tidak_ada_tagihan">Tidak Ada Tagihan</string>
    <string name="saat_ini_tidak_ada_tagihan">Saat ini tidak ada tagihan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="tambah_data_admin">Tambah Data Admin</string>
    <string name="silahkan_isi_field">Silahkan isi field</string>
    <string name="tambah_admin">Tambah Admin</string>
    <string name="ubah_data_anda">Ubah data anda</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="re_type_password_baru">Re-type Password Baru</string>
    <string name="kontak_admin">Kontak Admin</string>
    <string name="tentang_KosNow">Tentang KosNow</string>
    <string name="tagih_pembayaran">Tagih Pembayaran</string>
    <string-array name="wilayah_array">
        <item>Jimbaran</item>
        <item>Denpasar</item>
        <item>Kuta</item>
        <item>Canggu</item>
    </string-array>
</resources>