<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahKamarActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="26dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bd"
                android:text="@string/data_kamar"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/md"
                android:text="@string/input_data"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/nomor"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_kamar"
                    android:maxLength="50" />

                <EditText
                    android:id="@+id/lebar"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:hint="@string/lebar"
                    android:inputType="number"
                    android:maxLength="50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/x"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/panjang"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/panjang"
                    android:inputType="number"
                    android:maxLength="50" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pilih_wilayah" />

            <Spinner
                android:id="@+id/wilayah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/pilih_fasilitas_yang_ada" />

            <CheckBox
                android:id="@+id/ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ac" />

            <CheckBox
                android:id="@+id/kipas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kipas_angin" />

            <CheckBox
                android:id="@+id/lemari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lemari" />

            <CheckBox
                android:id="@+id/toilet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kamar_mandi" />

            <EditText
                android:id="@+id/harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/harga"
                android:inputType="number"
                android:maxLength="50" />

            <ImageView
                android:id="@+id/gambarkamar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera_alt_black_24dp" />

            <Button
                android:id="@+id/tambahkamar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/submit_data"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>